Update Docker with some information

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,6 @@
-FROM osgeo/gdal:ubuntu-small-latest-amd64
+FROM osgeo/gdal:ubuntu-small-latest-arm64
+ENV TZ=Europe/Paris
+RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
 
 RUN apt-get update
 RUN apt-get install -y libspatialindex-dev unar bc python3-pip wget
@@ -10,6 +12,7 @@ RUN mkdir /code
 ADD . /code/
 
 WORKDIR /code
+VOLUME [ "/code/data" ]
 CMD python3 server.py
 
 EXPOSE 8080
