--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
         container_name: open-elevation-api
         hostname: open-elevation-api.docker
         network_mode: bridge
-        image: registry.gitlab.com/skails/open-elevation-api:1.0-arm
+        image: registry.gitlab.com/skails/open-elevation-api:1.2-arm64
         restart: always
         expose:
           - 8080/tcp
@@ -13,6 +13,6 @@ services:
         labels:
             - "com.centurylinklabs.watchtower.enable=false"
         volumes:
-          - "/mnt/nfs/srv/z1-db_data/open-elevation-data:/code/data"
+          - "./data:/code/data"
           - "/etc/timezone:/etc/timezone:ro"
           - "/etc/localtime:/etc/localtime:ro"
